--- a/docker-compose copy.yaml
+++ b/docker-compose copy.yaml
@@ -18,6 +18,36 @@ services:
     ports:
       - "3100:3100"
 
+  app-a:
+    build: ./fastapi_app/
+    ports:
+      - "8000:8000"
+    depends_on:
+      - loki
+    environment:
+      APP_NAME: "app-a"
+    logging: *default-logging
+
+  app-b:
+    build: ./fastapi_app/
+    ports:
+      - "8001:8000"
+    depends_on:
+      - loki
+    environment:
+      APP_NAME: "app-b"
+    logging: *default-logging
+
+  app-c:
+    build: ./fastapi_app/
+    ports:
+      - "8002:8000"
+    depends_on:
+      - loki
+    environment:
+      APP_NAME: "app-c"
+    logging: *default-logging
+
   prometheus:
     image: prom/prometheus:v2.33.5
     ports:
